<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/nav_dashboard" />
    
    <item
        android:id="@+id/nav_cleaner"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/nav_cleaner" />
    
    <item
        android:id="@+id/nav_apps"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_apps" />
    
    <item
        android:id="@+id/nav_storage"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_storage" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
